fix table size and alignment

--- a/htdocs/components/95_static_content.css
+++ b/htdocs/components/95_static_content.css
@@ -61,8 +61,8 @@ ul#favourites_list li, ul#species_list li { cursor:move; }
 
 table.species-stats {          width:100%;       }
 table.species-stats td {       padding:4px 0;    }
-table.species-stats td.data {  font-weight:bold; }
-table.species-stats td.value { text-align:right; }
+table.species-stats td.data {  font-weight:bold;width:25%;padding-left:10px; }
+table.species-stats td.value { text-align:left;padding:4px; }
 
 /**
 */
